[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/playing_scene/combat_skill_line.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.752941 )

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_color = Color( 1, 1, 1, 1 )
shadow_color = Color( 1, 1, 1, 1 )
shadow_size = 8

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 1 )

[node name="CombatSkillLine" type="Panel"]
margin_right = 312.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( 156, 16 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
script = ExtResource( 2 )

[node name="Highlight" type="Panel" parent="."]
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = -32.0
rect_pivot_offset = Vector2( 124, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "スキルなし"
align = 1
valign = 1

[node name="ColorRectLeft" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 4.0
margin_right = 24.0
margin_bottom = -4.0
rect_min_size = Vector2( 16, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRectRight" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -8.0
rect_min_size = Vector2( 24, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
